--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -7,7 +7,8 @@
 body {
     overflow-x: hidden;
 }
-.specific_body{
+
+.specific_body {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,15 +20,19 @@ nav {
     display: flex;
     position: fixed;
     z-index: 100;
-    height: calc(100vh - 9.259vh); /* 100px */
-    width: 5vw; /* 100px */
+    height: calc(100vh - 9.259vh);
+    /* 100px */
+    width: 5vw;
+    /* 100px */
 }
 
 .horizontal_nav {
     justify-content: space-between;
-    height: 9.259vh; /* 100px */
+    height: 9.259vh;
+    /* 100px */
     align-items: center;
-    padding: 0 2.604vw; /* 50px */
+    padding: 0 2.604vw;
+    /* 50px */
     color: #fff;
     top: 0;
     width: 100vw;
@@ -44,13 +49,15 @@ nav {
 }
 
 .logo img {
-    width: 5.208vw; /* 100px */
+    width: 5.208vw;
+    /* 100px */
 }
 
 .links ul {
     list-style-type: none;
     display: flex;
-    width: 20.833vw; /* 400px */
+    width: 20.833vw;
+    /* 400px */
     justify-content: space-between;
 }
 
@@ -61,8 +68,10 @@ nav ul li a {
 
 .destaque_link {
     border: 1px solid #fff;
-    padding: 0.104vw 1.042vw; /* 2px 20px */
-    border-radius: 0.104vw; /* 2px */
+    padding: 0.104vw 1.042vw;
+    /* 2px 20px */
+    border-radius: 0.104vw;
+    /* 2px */
 }
 
 .vertical_nav ul {
@@ -98,7 +107,7 @@ nav ul li a {
 
 
 .dashboard_header {
-    margin: 100px 0 20px 100px; 
+    margin: 100px 0 20px 100px;
     color: rgba(0, 0, 0, 0.7);
 }
 
@@ -108,7 +117,7 @@ nav ul li a {
     height: fit-content;
     justify-content: center;
     margin-left: 130px;
-    gap: 30px; 
+    gap: 30px;
 }
 
 .dashboard_cards .left {
@@ -128,10 +137,12 @@ nav ul li a {
     flex: 1;
 }
 
-.section{
+.section {
     width: 100vw;
-    height: 100vh;;
+    height: 100vh;
+    ;
 }
+
 .card1 {
     flex: 1;
     position: relative;
@@ -151,7 +162,8 @@ nav ul li a {
     flex: 1;
     padding: 15px !important;
 }
-.card4{
+
+.card4 {
     height: 100%;
 }
 
@@ -170,8 +182,10 @@ nav ul li a {
 .alerts {
     display: flex;
     flex-direction: column;
-    gap: 1.042vw; /* 20px */
-    margin: 1.042vh 0.521vw 0 0.521vw; /* 20px 10px 0 10px */
+    gap: 1.042vw;
+    /* 20px */
+    margin: 1.042vh 0.521vw 0 0.521vw;
+    /* 20px 10px 0 10px */
 }
 
 .alerts .alert {
@@ -214,7 +228,7 @@ nav ul li a {
     left: 6.5vw;
 }
 
-.kpi_card1 span{
+.kpi_card1 span {
     font-size: .8vw;
 }
 
@@ -224,13 +238,15 @@ nav ul li a {
 }
 
 #COlineGeneral {
-    margin-top: 2.604vh; /* 25px */
+    margin-top: 2.604vh;
+    /* 25px */
 }
 
 .ranking {
     width: 100%;
     margin: 0 auto;
-    padding: 0 1.042vw; /* 20px */
+    padding: 0 1.042vw;
+    /* 20px */
     box-sizing: border-box;
 }
 
@@ -244,10 +260,12 @@ nav ul li a {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 1.042vh; /* 20px */
+    margin-top: 1.042vh;
+    /* 20px */
     color: #747474;
     font-weight: 600;
-    font-size: 0.937vw; /* 18px */
+    font-size: 0.937vw;
+    /* 18px */
 }
 
 .ranking_item .bar_container {
@@ -283,7 +301,8 @@ nav ul li a {
 
 .area_name,
 .header_area {
-    width: 10.417vw; /* 200px */
+    width: 10.417vw;
+    /* 200px */
     text-align: left;
     flex: 2;
 }
@@ -307,24 +326,31 @@ nav ul li a {
     list-style-type: none;
     display: flex;
     flex-direction: row;
-    margin-left: 13.020vw; /* 260px */
-    font-size: 1.146vw; /* 22px */
+    margin-left: 13.020vw;
+    /* 260px */
+    font-size: 1.146vw;
+    /* 22px */
     font-weight: 600;
     color: rgba(0, 0, 0, 0.60);
-    gap: 6.771vw; /* 130px */
-    margin-bottom: 0.9vh; /* 10px */
+    gap: 6.771vw;
+    /* 130px */
+    margin-bottom: 0.9vh;
+    /* 10px */
 }
 
 .attention_level {
     display: flex;
     flex-direction: row;
-    gap: 0.104vw; /* 5px */
+    gap: 0.104vw;
+    /* 5px */
 }
 
 .attention_level span {
     background-color: #bebebe;
-    width: 0.521vw; /* 10px */
-    height: 0.521vw; /* 10px */
+    width: 0.521vw;
+    /* 10px */
+    height: 0.521vw;
+    /* 10px */
     border-radius: 50%;
 }
 
@@ -333,7 +359,8 @@ nav ul li a {
 }
 
 .dashboard_specific_cards {
-    margin-left: 2.083vw; /* 40px */
+    margin-left: 2.083vw;
+    /* 40px */
 }
 
 .dashboard_specific_cards .cards {
@@ -351,11 +378,12 @@ nav ul li a {
     cursor: pointer;
     transition: box-shadow 0.25s;
 }
+
 .dashboard_specific_cards .cards .card:hover {
     box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.25);
 }
 
-.dashboard_specific_cards .cards .card .card_row{
+.dashboard_specific_cards .cards .card .card_row {
     display: flex;
     position: relative;
     align-items: center;
@@ -375,29 +403,35 @@ nav ul li a {
 }
 
 .dashboard_specific_cards {
-    padding: 0 2.604vw; /* 45px */
+    padding: 0 2.604vw;
+    /* 45px */
 }
 
 .dashboard_specific_header {
-    margin-left: 10.833vw; /* 207px */
+    margin-left: 10.833vw;
+    /* 207px */
 }
 
 .card .area_name_specific {
-    font-size: 1.042vw; /* 20px */
+    font-size: 1.042vw;
+    /* 20px */
     font-weight: 600;
     color: #000;
 }
 
 .atual {
-    margin-left: -2.604vw; /* -50px */
+    margin-left: -2.604vw;
+    /* -50px */
 }
 
 .variacao {
-    margin-left: -5.208vw; /* -100px */
+    margin-left: -5.208vw;
+    /* -100px */
 }
 
 .dashboard_area {
-    padding-bottom: 5.208vh; /* 100px */
+    padding-bottom: 5.208vh;
+    /* 100px */
 }
 
 .button_expand {
@@ -414,7 +448,8 @@ nav ul li a {
 }
 
 .button_expand span {
-    font-size: 2.778vh; /* 30px */
+    font-size: 2.778vh;
+    /* 30px */
     color: #4d4d4d;
 }
 
@@ -422,7 +457,8 @@ nav ul li a {
     display: flex;
     margin-top: 3vh;
 }
-.row_graphs{
+
+.row_graphs {
     display: block !important;
 }
 
@@ -437,13 +473,14 @@ nav ul li a {
     height: 320px !important;
     margin-top: 1vh;
 }
+
 #bubble_chart,
 #bubble_chart2,
 #bubble_chart3,
 #bubble_chart4,
 #bubble_chart5,
 #bubble_chart6,
-#bubble_chart7{
+#bubble_chart7 {
     width: 30vw !important;
     height: 260px !important;
     margin: 4vh 0 0 4.5vw;
@@ -473,22 +510,23 @@ nav ul li a {
     max-height: 1300px;
 }
 
-h3{
+h3 {
     text-align: center;
 }
 
-.second_graph h3{
+.second_graph h3 {
     margin-left: 4.5vw;
 }
 
-.bubble_chart_legend{
+.bubble_chart_legend {
     margin-left: 4.5vw;
     text-align: right;
     font-size: 14px;
     font-weight: 600;
     color: #4d4d4d;
 }
-.row_graphs .graph_buttons button{
+
+.row_graphs .graph_buttons button {
     background-color: #006dac;
     cursor: pointer;
     border: none;
@@ -500,74 +538,94 @@ h3{
     border-radius: 10px;
     transition: 0.25s;
 }
-.graph_buttons{
+
+.graph_buttons {
     display: flex;
     justify-content: center;
     gap: 20px;
     margin-top: 20px;
 }
-.graph_buttons button:not(.clicked):hover{
+
+.graph_buttons button:not(.clicked):hover {
     background-color: #005a8c;
     box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.25);
 }
-.graph_buttons button.clicked{
+
+.graph_buttons button.clicked {
     background-color: #00263b;
 }
-.alert_icon_specific_high{
+
+.alert_icon_specific_high {
     color: #E74C3C;
 }
-.alert_icon_specific_medium{
+
+.alert_icon_specific_medium {
     color: #ff9900;
 }
-.alerts_specific{
+
+.alerts_specific {
     width: 50%;
     border-radius: 10px;
     height: 320px;
     box-sizing: border-box;
     padding: 20px;
 }
-.alert_specific{
+
+.alert_specific {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 10px 0;
     flex: 1;
 }
-.alert_text{
+
+.alert_text {
     display: flex;
     align-items: center;
     gap: 10px;
 }
-.alerts_wrapper, .sensors_wrapper, .graph{
+
+.alerts_wrapper,
+.sensors_wrapper,
+.graph {
     display: flex;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.5s;
 }
-.alerts_wrapper.selected, .sensors_wrapper.selected, .graph.selected{
+
+.alerts_wrapper.selected,
+.sensors_wrapper.selected,
+.graph.selected {
     max-height: 1300px;
 }
-.alerts_graph{
+
+.alerts_graph {
     flex: 1;
     height: 320px;
     box-sizing: border-box;
     padding: 20px;
 }
-.alert_graph{
+
+.alert_graph {
     width: 100% !important;
     height: 100% !important;
 }
-.sensors_graph{
+
+.sensors_graph {
     width: 100% !important;
     height: 90% !important;
 }
-.sensors_kpis{
+
+.sensors_kpis {
     width: 50% !important;
 }
-.sensors_kpis h3{
+
+.sensors_kpis h3 {
     margin-left: 4.5vw;
 }
-.sensors_kpis_container{
+
+.sensors_kpis_container {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
@@ -575,7 +633,8 @@ h3{
     width: 100%;
     justify-content: center;
 }
-.sensor_kpi{
+
+.sensor_kpi {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -586,51 +645,64 @@ h3{
     background-color: #006dac;
     text-align: center;
 }
-.sensors_graph_container, .sensors_kpis{
+
+.sensors_graph_container,
+.sensors_kpis {
     flex: 1;
     padding: 20px;
     box-sizing: border-box;
 }
+
 .sensor_kpi.normal {
     background-color: #2ECC71
 }
+
 .sensor_kpi.atencao {
     background-color: #F1C40F;
 }
+
 .sensor_kpi.alerta {
     background-color: #E74C3C;
 }
-.sensors_kpis_container, .sensors_graph{
+
+.sensors_kpis_container,
+.sensors_graph {
     margin-top: 1vh;
 }
-.cadastro_container .cadastro .row{
+
+.cadastro_container .cadastro .row {
     display: flex;
     gap: 20px;
 }
-.cadastro_container .cadastro .row .field{
+
+.cadastro_container .cadastro .row .field {
     display: flex;
     flex-direction: column;
     flex: 1;
     gap: 5px;
 }
-.cadastro_container{
+
+.cadastro_container {
     width: 30vw;
     background-color: #f0f0f0;
     border-radius: 10px;
     box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.144);
     padding: 40px;
 }
-.cadastro_container .cadastro{
+
+.cadastro_container .cadastro {
     width: 100%;
 }
-.cadastro_body{
+
+.cadastro_body {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
 }
+
 .cadastro_container .cadastro .row .field input,
-.cadastro_container .cadastro .row .field select{
+.cadastro_container .cadastro .row .field select {
     font-size: 1rem;
     background-color: transparent;
     border: 3px solid #005a8c;
@@ -638,13 +710,15 @@ h3{
     outline: none;
     border-radius: 7px;
 }
-.cadastro{
+
+.cadastro {
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin-top: 20px;
 }
-.cadastro button{
+
+.cadastro button {
     background-color: #005a8c;
     color: #fff;
     border: none;
@@ -654,4 +728,75 @@ h3{
     font-weight: 600;
     padding: 20px;
     border-radius: 10px;
+}
+
+.perfil_container {
+    width: 30vw;
+    background-color: #f0f0f0;
+    border-radius: 10px;
+    box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.144);
+    padding: 40px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.perfil_container .content {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.perfil_container .content .perfil_info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-weight: bold;
+    font-size: 1.4vw;
+    gap: 3vh;
+}
+
+.perfil_container .content .perfil_info .info {
+
+    padding-inline: 0.78vw;
+    height: 5vh;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.perfil_container .content .perfil_dados {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-between;
+    font-weight: bold;
+    gap: 3vh;
+    font-size: 1.4vw;
+}
+
+.perfil_container .content .perfil_dados .dados {
+    font-weight: lighter;
+    border-radius: 3.65vw;
+    padding-inline: 0.78vw;
+    border: solid 2px #00000025;
+    height: 5vh;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.perfil_container .perfil_data {
+    align-self: flex-start;
+    justify-self: end;
+    font-weight: bold;
+}
+
+.perfil_container .perfil_data span{
+    font-weight: lighter;
 }
