--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -109,7 +109,7 @@ form.formRegistro {
   height: 30%;
   background-color: transparent;
   margin-left: 60vw;
-  margin-top: 25vh;
+  margin-top: 2vh;
 }
 
 
@@ -117,11 +117,13 @@ form h4 {
   font-weight: normal;
   color: #5A5A4F;
   font-size: 24px;
+  text-align: center;
 }
 
 form h1 {
-  margin-bottom: 20px;
-  font-size: 48px;
+  margin-bottom: 10px;
+  font-size: 42px;
+  text-align: center;
 }
 
 label {
@@ -133,7 +135,7 @@ label {
 
 .input-wrapper {
   position: relative;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 .input-wrapper input {
@@ -193,7 +195,7 @@ label {
 
 .input-wrapper {
   position: relative;
-  margin-bottom: 25px;
+  margin-bottom: 30px;
 }
 
 .input-wrapper input {
@@ -225,4 +227,10 @@ label {
   transform: translateY(-50%);
   color: #888;
   font-size: 18px;
+}
+
+.error{
+  position: absolute;
+  bottom: -20px;
+  left: 10px;
 }
