--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -21,9 +21,8 @@ nav {
     position: fixed;
     z-index: 100;
     height: calc(100vh - 9.259vh);
-    /* 100px */
     width: 5vw;
-    /* 100px */
+    left: 0;
 }
 
 .horizontal_nav {
@@ -494,12 +493,6 @@ nav ul li a {
     transition: max-height 0.5s;
 }
 
-.expand.expanded,
-.expand.expanded,
-.expand.expanded,
-.expand.expanded,
-.expand.expanded,
-.expand.expanded,
 .expand.expanded {
     max-height: 1300px;
 }
@@ -793,4 +786,135 @@ h3 {
 
 .perfil_container .perfil_data span{
     font-weight: lighter;
+}
+
+/* airguard dash */
+.airguard_dash{
+    padding: 100px 0 0 100px;
+}
+header.kpis_airguard{
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+header.kpis_airguard div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #005a8c;
+    color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 5px #07070756;
+}
+header.kpis_airguard div p.number{
+    font-size: 30px;
+    font-weight: 600;
+}
+.empresas_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    gap: 10px;
+}
+.empresas_container div{
+    background-color: #d8d8d8;
+    margin-left: -50px;
+    display: flex;
+    align-items: center;
+    gap: 50px;
+    justify-content: center;
+    width: 90%;
+    padding: 10px 20px;
+    border-radius: 10px;
+}
+.empresas_container div img{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+}
+
+.kpis_airguard button{
+    position: absolute;
+    width: 70px;
+    height: 70px;
+    background-color: #005a8c;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    right: 100px;
+    top: 10px;
+    border: none;
+    border-radius: 10px;
+}
+.kpis_airguard button span{
+    font-size: 30px;
+}
+.empresas_modal_register{
+    position: absolute;
+    z-index: 10000;
+    right: 0;
+    top: 0;
+    height: 100vh;
+    width: 40vw;
+    background-color: #f1f1f1;
+    display: none;
+}
+.empresas_modal_register.open{
+    display: flex;
+    flex-direction: column;
+    padding: 60px 30px;
+    box-sizing: border-box;
+    align-items: center;
+    gap: 20px;
+}
+.out{
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background-color: #0000008e;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    display: none;
+}
+.out.open{
+    display: block;
+}
+.empresas_modal_register .fields_container{
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    gap: 20px;
+}
+.empresas_modal_register .fields_container .profile_picture{
+    display: flex;
+    justify-content: center;
+}
+.empresas_modal_register .fields_container .profile_picture img{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+.empresas_modal_register .fields_container .fields{
+    display: flex;
+    flex-direction: column;
+}
+.empresas_modal_register .fields_container .fields input{
+    font-size: 16px;
+    padding: 10px 20px;
+    outline: none;
+    border: 2px #005a8c solid;
+    border-radius: 50px;
+}
+.empresas_modal_register .fields_container .fields button{
+    background-color: #005a8c;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 600;
+    border: none;
+    padding: 20px;
+    border-radius: 10px;
 }
