--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -270,6 +270,56 @@ nav ul li a {
     flex: 4;
 }
 
+.bar {
+    max-width: 100%; 
+    height: 100%;
+    border-radius: 4px;
+    transition: width 0.4s ease;
+}
+
+.ranking_legend {
+    margin-top: 20px;
+    font-size: 0.937vw;
+    color: #333;
+    background-color: #ffffff;
+    padding: 15px 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 5px rgba(0,0,0,0.1);
+}
+
+.ranking_legend ul {
+    list-style: none;
+    padding-left: 0;
+    margin-top: 10px;
+}
+
+.ranking_legend li {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+}
+
+.legend_color {
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    margin-right: 10px;
+    border-radius: 3px;
+}
+
+.legend_color.green_bar {
+    background-color: #2ECC71;
+}
+.legend_color.yellow_bar {
+    background-color: #F1C40F;
+}
+.legend_color.red_bar {
+    background-color: #E74C3C;
+}
+.legend_color.blackred_bar {
+    background-color: #5f0a00;
+}
+
 .bar_container .red_bar {
     background-color: #E74C3C;
     height: 100%;
