--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1135,3 +1135,17 @@ header.kpis_airguard div p.number {
     padding: 10px 14px;
     cursor: pointer;
 }
+
+.bolinha {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+    font-weight: bold;
+    font-size: 16px;
+    background-color: gray;
+  }     
