adicionando campo de 'isadm' no bd e corrigindo links

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1148,4 +1148,10 @@ header.kpis_airguard div p.number {
     font-weight: bold;
     font-size: 16px;
     background-color: gray;
-  }     
+  }
+
+.nav_superior a{
+    gap: 6px;
+    display: flex;
+    align-items: center;
+}
