--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -622,7 +622,10 @@ h3 {
 .alert_icon_specific_medium {
     color: #ff9900;
 }
-
+.alerts_container{
+    overflow-y: scroll;
+    height: 100%;
+}
 .alerts_specific {
     width: 50%;
     border-radius: 10px;
