--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -301,6 +301,18 @@ nav ul li a {
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
 }
 
+.ranking_legend ul {
+    list-style: none;
+    padding-left: 0;
+    margin-top: 10px;
+}
+
+.ranking_legend li {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+}
+
 .legend-item {
   display: flex;
   align-items: center;
@@ -721,6 +733,7 @@ h3 {
     width: 100%;
     justify-content: center;
 
+    max-height: 250px;
     overflow-y: auto;
     padding-right: 10px;
 
