--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -182,16 +182,24 @@ nav ul li a {
     height: 550px;
     padding: 5px;
 }
-
-.alerts .alert {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.alerts .alert{
     padding: 10px;
     box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+}
+.alerts .alert div{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.alert_hour:last-child{
+    color: #00000070;
+    font-weight: 600;
+    font-size: 14px;
 }
 
 .alert_icon {
